apps/istio/k8s/peerauthentication.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: infra-istio-system
spec:
  mtls:
    mode: PERMISSIVE
