apps/istio/k8s/sidecar.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: infra-istio-system
spec:
  egress:
    - hosts:
        - "./*"
        - "infra-ingress/*"
